@@ -53,6 +53,16 @@ static inline data_error_t data_database_private_unlock ( data_database_t *this_
     return result;
 }
 
+static inline bool data_database_is_open( data_database_t *this_ )
+{
+    bool result;
+    data_error_t locking_error;
+    locking_error = data_database_private_lock( this_ );
+    result = (*this_).is_open;
+    locking_error |= data_database_private_unlock( this_ );
+    return result;
+}
+
 
 /*
 Copyright 2016-2016 Andreas Warnke
