@@ -13,8 +13,8 @@
  */
 enum gui_simple_message_content_enum {
     GUI_SIMPLE_MESSAGE_CONTENT_ABOUT,  /*!< shows the about text */
-    GUI_SIMPLE_MESSAGE_CONTENT_NOTHING_SELECTED,
-    GUI_SIMPLE_MESSAGE_CONTENT_NOTHING_FOCUSED,
+    GUI_SIMPLE_MESSAGE_CONTENT_DB_FILE_NOT_OPENED,  /*!< the chosen database file cannot be used */
+    GUI_SIMPLE_MESSAGE_CONTENT_DB_FILE_OPENED_WITH_ERROR,  /*!< the chosen database file was opened but with a warning/error */
     GUI_SIMPLE_MESSAGE_CONTENT_MAX_WINDOWS_ALREADY_OPEN,  /*!< the maximum number of windows is already open */
     GUI_SIMPLE_MESSAGE_CONTENT_NOT_YET_IMPLEMENTED,  /*!< the feature is not yet implemented */
 };
